update specs and code to reflect new topping prices, add spec to test 4 ingredients, pass spec

--- a/pizzaCompany.html
+++ b/pizzaCompany.html
@@ -29,9 +29,9 @@
             <select name="size-select" id="size-select" class="form-control">
               <option value="pepperoni">Pepperoni</option>
               <option value="sausage">Sausage</option>
-              <option value="olives">Olives</option>
-              <option value="mushrooms">Mushrooms</option>
-              <option value="onions">Onions</option>
+              <option value="olive">Olives</option>
+              <option value="mushroom">Mushrooms</option>
+              <option value="onion">Onions</option>
               <option value="extra-cheese">Extra Cheese</option>
               <option value="bacon">Canadian Bacon</option>
               <option value="pineapple">Pineapple</option>
