--- a/pizzaCompany.html
+++ b/pizzaCompany.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-1.11.3.js"></script>
+    <script src="js/jquery-1.11.2.js"></script>
     <script src="js/scripts.js"></script>
     <title>Pizza Company</title>
   </head>
@@ -16,6 +16,12 @@
             <label for="customer-name">Enter Your Name: </label>
             <input type="text" class="form-control" id="customer-name">
           </div>
+
+          <div class-"form-group">
+            <label for="quantity">How Many Pizzas would you like? </label>
+            <input type="number" class="form-control" id="quantity">
+          </div>
+
           <div class="form-group">
             <label for="size-select">Select Size of Pizza</label>
             <select name="size-select" id="size-select" class="form-control">
@@ -24,24 +30,43 @@
               <option value="large">Large</option>
             </select>
           </div>
-          <div class="form-group">
-            <label for="topping-select">Select a Topping</label>
-            <select name="size-select" id="size-select" class="form-control">
-              <option value="pepperoni">Pepperoni</option>
-              <option value="sausage">Sausage</option>
-              <option value="olive">Olives</option>
-              <option value="mushroom">Mushrooms</option>
-              <option value="onion">Onions</option>
-              <option value="extra-cheese">Extra Cheese</option>
-              <option value="bacon">Canadian Bacon</option>
-              <option value="pineapple">Pineapple</option>
-              <option value="garlic">Garlic</option>
-            </select>
+
+          <div id="new-toppings">
+            <div class="form-group new-topping-container">
+              <label for="new-topping">Select a Topping</label>
+              <select name="new-topping" id="topping-select" class="form-control new-topping">
+                <option value="pepperoni">Pepperoni</option>
+                <option value="sausage">Sausage</option>
+              </select>
+            </div>
           </div>
-          <button type="submit" id="add-pizza">Check Price</button>
           <button type="submit" id="add-topping">Add a Topping</button>
+          <button type="submit" id="add-pizza">Check Price</button>
         </form>
+      </div>
+
+      <div class="customer-name">
+        <h4 class="customer-name"></h4>
+      </div>
+      <div>
+        <h5 class="pizza-size"></h5>
+      </div>
+      <div>
+        <h5>Toppings on your Pizza: </h5>
+        <ul class="toppings">
+        </ul>
       </div>
     </div>
   </body>
 </html>
+
+<!-- 
+                <option value="olive">Olives</option>
+                <option value="mushroom">Mushrooms</option>
+                <option value="onion">Onions</option>
+                <option value="extra-cheese">Extra Cheese</option>
+                <option value="bacon">Canadian Bacon</option>
+                <option value="pineapple">Pineapple</option>
+                <option value="garlic">Garlic</option>
+
+ -->
