add functionality to display the total cost of the pizza

--- a/pizzaCompany.html
+++ b/pizzaCompany.html
@@ -37,6 +37,13 @@
               <select name="new-topping" id="topping-select" class="form-control new-topping">
                 <option value="pepperoni">Pepperoni</option>
                 <option value="sausage">Sausage</option>
+                <option value="olive">Olives</option>
+                <option value="mushroom">Mushrooms</option>
+                <option value="onion">Onions</option>
+                <option value="extra-cheese">Extra Cheese</option>
+                <option value="bacon">Canadian Bacon</option>
+                <option value="pineapple">Pineapple</option>
+                <option value="garlic">Garlic</option>
               </select>
             </div>
           </div>
@@ -56,17 +63,9 @@
         <ul class="toppings">
         </ul>
       </div>
+      <div>
+        <h2 class="total-cost"></h2>
+      </div>
     </div>
   </body>
 </html>
-
-<!-- 
-                <option value="olive">Olives</option>
-                <option value="mushroom">Mushrooms</option>
-                <option value="onion">Onions</option>
-                <option value="extra-cheese">Extra Cheese</option>
-                <option value="bacon">Canadian Bacon</option>
-                <option value="pineapple">Pineapple</option>
-                <option value="garlic">Garlic</option>
-
- -->
