working prototype, displays order properly, needs re-try functionality and reset function as well as css styling

--- a/pizzaCompany.html
+++ b/pizzaCompany.html
@@ -35,15 +35,15 @@
             <div class="form-group new-topping-container">
               <label for="new-topping">Select a Topping</label>
               <select name="new-topping" id="topping-select" class="form-control new-topping">
-                <option value="pepperoni">Pepperoni</option>
-                <option value="sausage">Sausage</option>
-                <option value="olive">Olives</option>
-                <option value="mushroom">Mushrooms</option>
-                <option value="onion">Onions</option>
-                <option value="extra-cheese">Extra Cheese</option>
-                <option value="bacon">Canadian Bacon</option>
-                <option value="pineapple">Pineapple</option>
-                <option value="garlic">Garlic</option>
+                <option value="Pepperoni">Pepperoni</option>
+                <option value="Sausage">Sausage</option>
+                <option value="Olive">Olives</option>
+                <option value="Mushroom">Mushrooms</option>
+                <option value="Onion">Onions</option>
+                <option value="Extra-cheese">Extra Cheese</option>
+                <option value="Bacon">Bacon</option>
+                <option value="Pineapple">Pineapple</option>
+                <option value="Garlic">Garlic</option>
               </select>
             </div>
           </div>
@@ -52,20 +52,25 @@
         </form>
       </div>
 
-      <div class="customer-name">
-        <h4 class="customer-name"></h4>
+      <div class="pizza-stats">
+        <div class="customer-name">
+          <h4 class="customer-name"></h4>
+        </div>
+        <div>
+          <h5 class="pizza-size"></h5>
+        </div>
+        <div>
+          <h5 class="display-toppings"></h5>
+          <h5> </h5>
+          <ul class="toppings">
+          </ul>
+        </div>
+        <div>
+          <h2 class="total-cost"></h2>
+        </div>
+        <!-- <button type="submit" id="try-again">Check another Pizza</button> -->
       </div>
-      <div>
-        <h5 class="pizza-size"></h5>
-      </div>
-      <div>
-        <h5>Toppings on your Pizza: </h5>
-        <ul class="toppings">
-        </ul>
-      </div>
-      <div>
-        <h2 class="total-cost"></h2>
-      </div>
+
     </div>
   </body>
 </html>
